# seaaes

./: 0123-lotto.html  0124-성적표.html  Chapter04_기초과제_(정세아).ipynb  Chapter05~08_기초과제_정세아.ipynb  Chapter09_13_기초과제_정세아.ipynb  Mini_Project_정세아.ipynb  README.md  banner.css  chapter14~16_정세아.ipynb  chapter17_20_정세아.ipynb  dark-mode.html  footer.css  header.css  info.css  notice.css  profile.css  user.html  챌린지1-태그 사용해보기.html  챌린지11-chat.html  챌린지15-text.css  챌린지2-form.html  챌린지3-blog.html  챌린지4-회원가입.html  캐러셀.html  회원가입.html
01_Python/: Chapter04_기초과제_(정세아).ipynb  Chapter09_13_기초과제_정세아.ipynb
02_HTML&CSS/CSS_02/: 0109_CSS 프로필페이지.html  0109_박스로 꾸미기.html
02_HTML&CSS/CSS_03/: 0109_chat.css  0109_간단 소개 화면.html
02_HTML&CSS/CSS_04/: 0110_chat_back.css  0110_chat_main.html  0110_반응형 웹.html
02_HTML&CSS/HTML&CSS_05/: 0111_market_banner.css  0111_market_header.css  0111_market_index.html  0111_market_info.css
03_JavaScript/JS_02/: 0121_Mystery Number.html  0121_monster.html  0121_while문.html  0121_별트리.html  0121_시험점수.html
03_JavaScript/JS_03/: 0122_join.html  0122_구구단.html  0122_스톱워치.html  0122_카운트다운.html
03_JavaScript/JS_05/: 0124_DogPage_breeds.html  0124_DogPage_breeds.js
06_Django/Dj_01/: db.sqlite3  pyproject.toml
06_Django/Dj_01/config/: settings.py
06_Django/Dj_01/feeds/: views.py
07_FastAPI/: README.md  books.py  models.py
Admin/: admin.html
JavaScript과제/: 0123-lotto.html  0124-성적표.html
JavaSrcipt과제/: 0123-lotto.html  0123-멈추기.html
Python과제/: Chapter05~08_기초과제_정세아.ipynb  Mini_Project_정세아.ipynb  chapter14~16_정세아.ipynb  chapter17_20_정세아.ipynb
(+33 files in other folders)
