[tool.poetry]
name = "oz-backend-django"
version = "0.1.0"
description = "python django project"
authors = ["seaj6382 <seaj6382@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
